# fast-watershed

./: .gitignore  Dockerfile  LICENSE  README.md  aot.py  requirements.txt  setup.cfg  setup.py
deploy/aws/fast-watershed-api/: README.md  cdk.json  package.json
deploy/aws/fast-watershed-api/lib/: fast-watershed-api-stack.ts
deploy/aws/fast-watershed-api/resources/: Dockerfile  delineate-template.py  delineate.py
deploy/aws/fast-watershed-api/test/: fast-watershed-api.test.ts
fastws/: aot.py  points.py  raster.py  watershed.py
scripts/: deploy
src/: README.md  cdk.json  package.json
src/fastws/: data.py  points.py  raster.py  watershed.py
src/lib/: fast-watershed-api-stack.ts
src/resources/: Dockerfile  handler.py
src/resources/app/: setup.py
src/resources/app/fastws/: watershed.py
src/resources/fastws/: setup.py
src/resources/fastws/src/: watershed.py
ui/: README.md  package.json  quasar.config.js  tsconfig.json
ui/src/: index.template.html
ui/src/api/: config-example.ts
ui/src/pages/: MapPage.vue
