[metadata]
name = fast-watershed
version = attr: fastws.__version__
description = Quickly and efficiently delineate watersheds
long_description = file: README.md
long_description_content_type = text/markdown
author = bluegeo
author_email = devin.cairns@bluegeo.ca
url = https://github.com/bluegeo/fast-watershed
project_urls =
    Documentation = https://github.com/fast-watershed
    Issues = https://github.com/bluegeo/fast-watershed/issues
keywords =
    hydrology
    terrain
    watershed
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    rasterio
    pyproj
    numpy
    numba

[options.packages.find]
where = src
